<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="15"
    android:background="@mipmap/symptom_back"
    tools:context=".user_profile.symptom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3.5">

        <TextView
            android:id="@+id/textView6"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/symptoms"
            android:textAlignment="center"
            android:textColor="@color/transy_white"
            android:textSize="18dp"
            app:fontFamily="@font/loginfont"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        android:layout_weight="7.5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingTop="20dp"
            android:weightSum="3">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="4">

                <CheckBox
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/darker_grey"
                    android:textColor="@color/black"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/fever"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:buttonTint="@color/darker_grey"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/pain" />

                <CheckBox

                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:buttonTint="@color/darker_grey"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/cold" />

                <CheckBox
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/darker_grey"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/nausea" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="5">

                <CheckBox
                    android:id="@+id/rb5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:buttonTint="@color/darker_grey"
                    android:textColor="@color/black"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/bleeding" />

                <CheckBox
                    android:id="@+id/rb6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:buttonTint="@color/darker_grey"
                    android:textColor="@color/black"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/infection" />

                <CheckBox
                    android:id="@+id/rb7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/darker_grey"
                    android:textColor="@color/black"
                    android:fontFamily="@font/loginfont"
                    android:textSize="15sp"
                    android:text="@string/iching" />

                <CheckBox
                    android:id="@+id/rb8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/darker_grey"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/drying" />

                <CheckBox
                    android:id="@+id/rb9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/darker_grey"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/others" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:orientation="vertical"
                android:weightSum="4">

                <CheckBox
                    android:id="@+id/rb10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:buttonTint="@color/darker_grey"
                    android:textSize="15sp"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/Vomitting" />

                <CheckBox
                    android:id="@+id/rb11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/loginfont"
                    android:buttonTint="@color/darker_grey"
                    android:text="@string/headache" />

                <CheckBox
                    android:id="@+id/rb12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:buttonTint="@color/darker_grey"
                    android:textSize="15sp"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/swelling" />

                <CheckBox
                    android:id="@+id/rb13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/darker_grey"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/loginfont"
                    android:text="@string/disenty" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"></LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/loginfont"
                android:padding="5dp"
                android:text="@string/specify"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/textbox_style"
                android:ems="10"
                android:fontFamily="@font/loginfont"
                android:hint="@string/joint_pain"
                android:inputType="textPersonName"
                android:paddingVertical="2dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:gravity="center_horizontal" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"></LinearLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="start"
                android:fontFamily="@font/loginfont"
                android:padding="5dp"
                android:text="@string/time"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/textbox_style"
                android:ems="10"
                android:fontFamily="@font/loginfont"
                android:hint="@string/date"
                android:textColorHint="@color/dark_grey"
                android:inputType="textPersonName"
                android:paddingVertical="2dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:gravity="center_horizontal" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"></LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/loginfont"
                android:text="@string/save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:fontFamily="@font/loginfont"
                android:text="@string/next"
                android:textColor="@color/white" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="2.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/loginfont"
                android:text="@string/ext_report"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:layout_marginHorizontal="40dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@drawable/upload_button"
                android:fontFamily="@font/loginfont"
                android:text="@string/upload"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@color/light_dark_grey"
                android:fontFamily="@font/loginfont"
                android:text="Browse File"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/file"
            android:text="No file selected"
            android:textAlignment="textEnd"
            android:layout_marginHorizontal="40dp"
            android:gravity="end" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />






</LinearLayout>